# debian-deborphan

./: deborphan-dbgsym_1.7.31_amd64.deb  deborphan_1.7.31_amd64.build  deborphan_1.7.31_amd64.buildinfo  deborphan_1.7.31_amd64.changes  deborphan_1.7.31_amd64.deb
deborphan/: .gitlab-ci.yml  Makefile  Makefile.am  Makefile.in  THANKS  config.status  configure  configure.ac
deborphan/.git~/: config  index  packed-refs  shallow
deborphan/autom4te.cache/: output.0  requests  traces.0  traces.1
deborphan/debian/: README.source  autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  deborphan.postinst.debhelper  deborphan.postrm.debhelper  dirs  docs  files  postinst  postrm  rules
deborphan/doc/: Makefile  Makefile.am  Makefile.in  deborphan.1  editkeep.8  orphaner.8
deborphan/doc/de/: Makefile  Makefile.am  Makefile.in  de.add  de2.add  deborphan.1  editkeep.8  orphaner.8
deborphan/doc/es/: Makefile  Makefile.am  Makefile.in  deborphan.1  editkeep.8  es.add  es2.add  orphaner.8
deborphan/doc/fr/: Makefile  Makefile.am  Makefile.in  deborphan.1  editkeep.8  fr.add  fr2.add  orphaner.8
deborphan/doc/nl/: Makefile  Makefile.am  Makefile.in  deborphan.1  editkeep.8  orphaner.8
deborphan/doc/pl/: Makefile  Makefile.am  Makefile.in  deborphan.1  editkeep.8  orphaner.8
deborphan/doc/po/: Makefile  Makefile.am  Makefile.in  de.po  deborphan.pot  es.po  fr.po  nl.po  pl.po  pt.po
deborphan/doc/pt/: Makefile  Makefile.am  Makefile.in  deborphan.1  editkeep.8  orphaner.8
deborphan/include/: Makefile  Makefile.in  config.h  config.h.in  (+1 more)
(+100 files in other folders)
