# Copyright (C) 2000, 2001, 2002, 2003 Cris van Pelt
# Copyright (C) 2003, 2004 Peter Palfrader

SUBDIRS =               po fr pl es de pt nl
man_MANS =              deborphan.1 orphaner.8 editkeep.8
EXTRA_DIST =            $(man_MANS) po/deborphan.pot po/fr.po po/pl.po po/es.po po/de.po po/pt.po po/nl.po

